WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158231
REGRESSION(
r200694
): %ThrowTypeError% is not unique
https://bugs.webkit.org/show_bug.cgi?id=158231
Summary
REGRESSION(r200694): %ThrowTypeError% is not unique
Michael Saboff
Reported
2016-05-31 13:34:06 PDT
Section 9.2.7.1 in the ES spec states that there should be one %ThrowTypeError% intrinsic for each realm. The tests at
https://rawgit.com/tvcutsem/es-lab/master/src/ses/contract.html
check for this and fail after <
http://trac.webkit.org/changeset/200694
>.
Attachments
Patch
(40.61 KB, patch)
2016-06-02 12:24 PDT
,
Michael Saboff
joepeck
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(730.08 KB, application/zip)
2016-06-02 13:25 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(808.69 KB, application/zip)
2016-06-02 13:28 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-yosemite
(1.43 MB, application/zip)
2016-06-02 13:34 PDT
,
Build Bot
no flags
Details
Updated patch from comments and rebased failing inspector test
(43.38 KB, patch)
2016-06-02 13:53 PDT
,
Michael Saboff
joepeck
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-05-31 13:36:46 PDT
Hmm, we can roll out
r200694
if this really affects a page. Wouldn't this have existed prior to this change though?
Radar WebKit Bug Importer
Comment 2
2016-05-31 13:38:07 PDT
<
rdar://problem/26560709
>
Radar WebKit Bug Importer
Comment 3
2016-05-31 13:40:28 PDT
<
rdar://problem/26560739
>
Michael Saboff
Comment 4
2016-06-02 12:24:31 PDT
Created
attachment 280347
[details]
Patch
Joseph Pecoraro
Comment 5
2016-06-02 12:48:04 PDT
Comment on
attachment 280347
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280347&action=review
r=me
> Source/JavaScriptCore/runtime/JSFunction.cpp:322 > static GetterSetter* getThrowTypeErrorGetterSetter(JSFunction* function)
I think you can just remove this function now, replacing the two remaining calls: 378: GetterSetter* errorGetterSetter = getThrowTypeErrorGetterSetter(thisObject); 393: GetterSetter* errorGetterSetter = getThrowTypeErrorGetterSetter(thisObject);
> Source/JavaScriptCore/runtime/JSGlobalObject.h:491 > + GetterSetter* throwTypeErrorArgumentsCalleeAndCallerGetterSetter()
The one line looks way nicer ;)
> Source/JavaScriptCore/runtime/JSGlobalObjectFunctions.cpp:787 > + return throwVMTypeError(exec, "'arguments', 'callee' and 'caller' cannot be accessed in strict mode.");
I think we normally use the Oxford comma, so here a comma before "and". Up to you.
> LayoutTests/js/script-tests/throw-type-error-is-unique.js:25 > + testFailed(this.context + " " + accessorType +"ter for \"" + name + "\" is not the same %ThrowTypeError% intrinsic");
Style: weird spacing in here you might want to cleanup.
Build Bot
Comment 6
2016-06-02 13:25:29 PDT
Comment on
attachment 280347
[details]
Patch
Attachment 280347
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1424607
New failing tests: inspector/runtime/getProperties.html
Build Bot
Comment 7
2016-06-02 13:25:33 PDT
Created
attachment 280355
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 8
2016-06-02 13:28:11 PDT
Comment on
attachment 280347
[details]
Patch
Attachment 280347
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1424611
New failing tests: inspector/runtime/getProperties.html
Build Bot
Comment 9
2016-06-02 13:28:15 PDT
Created
attachment 280356
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 10
2016-06-02 13:34:06 PDT
Comment on
attachment 280347
[details]
Patch
Attachment 280347
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1424617
New failing tests: inspector/runtime/getProperties.html
Build Bot
Comment 11
2016-06-02 13:34:09 PDT
Created
attachment 280358
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Michael Saboff
Comment 12
2016-06-02 13:53:19 PDT
Created
attachment 280363
[details]
Updated patch from comments and rebased failing inspector test
WebKit Commit Bot
Comment 13
2016-06-02 13:56:12 PDT
Attachment 280363
[details]
did not pass style-queue: ERROR: LayoutTests/ChangeLog:11: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 14
2016-06-02 13:58:44 PDT
Comment on
attachment 280363
[details]
Updated patch from comments and rebased failing inspector test r=me
Michael Saboff
Comment 15
2016-06-02 15:00:30 PDT
Committed
r201619
: <
http://trac.webkit.org/changeset/201619
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug