REGRESSION(r200694): %ThrowTypeError% is not unique https://bugs.webkit.org/show_bug.cgi?id=158231

Reviewed by Joseph Pecoraro.

Source/JavaScriptCore:

The ES6 standard in section 9.2.7.1 states that %ThrowTypeError% is unique.  This
change reverts the handling of TypeError before r200694 and then rolls in
throwTypeErrorGetterSetter() with the renamed throwTypeErrorArgumentsCalleeAndCallerGetterSetter().

* runtime/ClonedArguments.cpp:
(JSC::ClonedArguments::getOwnPropertySlot):
(JSC::ClonedArguments::materializeSpecials):
* runtime/JSBoundFunction.cpp:
(JSC::JSBoundFunction::finishCreation):
(JSC::JSBoundFunction::visitChildren):
* runtime/JSFunction.cpp:
(JSC::getThrowTypeErrorGetterSetter):
(JSC::JSFunction::callerGetter):
(JSC::JSFunction::defineOwnProperty):
* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):
(JSC::JSGlobalObject::visitChildren):
* runtime/JSGlobalObject.h:
(JSC::JSGlobalObject::regExpProtoSymbolReplaceFunction):
(JSC::JSGlobalObject::regExpProtoGlobalGetter):
(JSC::JSGlobalObject::regExpProtoUnicodeGetter):
(JSC::JSGlobalObject::throwTypeErrorArgumentsCalleeAndCallerGetterSetter):
(JSC::JSGlobalObject::moduleLoader):
(JSC::JSGlobalObject::throwTypeErrorGetterSetter): Deleted.
(JSC::JSGlobalObject::throwTypeErrorCalleeAndCallerGetterSetter): Deleted.
(JSC::JSGlobalObject::throwTypeErrorArgumentsAndCallerInStrictModeGetterSetter): Deleted.
(JSC::JSGlobalObject::throwTypeErrorArgumentsAndCallerInClassContextGetterSetter): Deleted.
* runtime/JSGlobalObjectFunctions.cpp:
(JSC::globalFuncThrowTypeError):
(JSC::globalFuncThrowTypeErrorArgumentsCalleeAndCaller):
(JSC::globalFuncThrowTypeErrorCalleeAndCaller): Deleted.
(JSC::globalFuncThrowTypeErrorArgumentsAndCallerInStrictMode): Deleted.
(JSC::globalFuncThrowTypeErrorArgumentsAndCallerInClassContext): Deleted.
* runtime/JSGlobalObjectFunctions.h:
* tests/stress/reflect-set.js:

LayoutTests:

Rebased tests for the new TypeError messages.
Added a new test, throw-type-error-is-unique.html.

* inspector/runtime/getProperties-expected.txt:
* js/basic-strict-mode-expected.txt:
* js/caller-property-expected.txt:
* js/class-method-and-constructor-properties-expected.txt:
* js/script-tests/caller-property.js:
(strictCaller):
(strictTailCaller):
* js/script-tests/class-method-and-constructor-properties.js:
(F.prototype.getElement):
(F):
(G.prototype.get item):
(G):
(H.prototype.arguments):
(H):
* js/script-tests/throw-type-error-is-unique.js: Added.
(ThrowTypeErrorSource):
(ThrowTypeErrorSource.prototype.checkTypeErrorFunctions):
(A):
(strictArguments):
(test):
* js/throw-type-error-is-unique-expected.txt: Added.
* js/throw-type-error-is-unique.html: Added.


Canonical link: https://commits.webkit.org/176405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201619 268f45cc-cd09-0410-ab3c-d52691b4dbfc